# practice-aws-copilot-cloudformation-django

./: .env.app.sample  .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.app.sh  pyproject.toml
apps/hello/: views.py
cloudformation/: rds.parameters.properties.sample  rds.template.yml
copilot/environments/test/: manifest.yml
copilot/hello-world/: manifest.yml
docker/nginx/: nginx.app.conf  nginx_Dockerfile
example_project/: asgi.py  env.py  settings.py  urls.py  wsgi.ini
scripts/: copilot.sh  rds.cloudformation.sh
