[tool.poetry]
name = "practice-aws-copilot-cloudformation-django"
version = "0.1.0"
description = ""
authors = ["ta14-u <57866052+ta14-u@users.noreply.github.com>"]
packages = [{include = "example_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
gunicorn = "20.1.0"
python-dotenv = "1.0.0"
pydantic = "1.10.7"
requests = "2.28.2"
mysqlclient = "2.1.1"


[tool.poetry.group.dev.dependencies]
black = "23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
